fix lombok issue, cannot find symbol